--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"dd-trace": "^5.3.0",
 		"flowbite": "^1.8.1",
 		"flowbite-svelte": "^0.43.1",
 		"svelte-markdown": "^0.3.0",
